# sew9-2324-worttrainer-pdamianik

./: Cargo.toml  README.md  build.rs  diagram.mdj
.github/workflows/: rust.yml
resources/: main.ui  resources.gresource.xml  statistic.ui  window.ui  word_list.ui
src/: application.rs  main.rs  model.rs  observer.rs  view.rs
src/model/: mod.rs  statistic.rs
src/view/: mod.rs  statistic.rs  web_image.rs  window.rs
src/view/main_window/: imp.rs
src/view/web_image/: imp.rs  mod.rs  util.rs
src/view/window/: imp.rs  mod.rs
src/view/word_list/: imp.rs  mod.rs
