[package]
name = "spelling_trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
url = { version = "2.4.1"}
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.28"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12", "gnome_45"] }
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }

[dev-dependencies]
lazy_static = "1.4.0"

[build-dependencies]
glib-build-tools = "0.18.0"
